--- a/baruch.html
+++ b/baruch.html
@@ -33,7 +33,7 @@
 	</nav>
 	<div id="porfolio_container">
 		<h1 id="project_name_text">Baruch College Play</h1>
-		<p id="project_description_text">For my Graphic Design class focusing on Typography, we were assigned to create a poster design for the school play, Tennessee Williams's <i>Suddenly Last Summer</i>.</p>
+		<p id="project_description_text">For my Graphic Design class focusing on Typography, we were assigned to create a poster design for the school play&mdash; Tennessee Williams's <i>Suddenly Last Summer</i>.</p>
 		<div class="fifty_spacer"></div>
 		<img class="larger_project_image" src="imgs/suddenly-last-sm.png" alt="Suddenly Last Summer Poster" />
 		<div class="fifty_spacer"></div>
