--- a/iphone.html
+++ b/iphone.html
@@ -5,7 +5,7 @@
 	<!-- Meta Tags -->
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="Web Development and Graphic Design portfolio website.">
+	<meta name="description" content="iPhone reproduction built with HTML, CSS, Javascript and JQuery by Connor.">
 	<meta name="author" content="Connor Rowland">
 	<!-- Scripts and Links -->
 	<script>
