--- a/letsmeet.html
+++ b/letsmeet.html
@@ -5,7 +5,7 @@
 	<!-- Meta Tags -->
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="Web Development and Graphic Design portfolio website.">
+	<meta name="description" content="Engineering and design work done by Connor for an application intended to help people find a central meeting location.">
 	<meta name="author" content="Connor Rowland">
 	<!-- Scripts and Links -->
 	<script>
