--- a/pride.html
+++ b/pride.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Connor Rowland | Web Developer</title>
+	<title>Connor Rowland | Web Engineer // Graphic Designer</title>
 	<!-- Meta Tags -->
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="Web Development and Graphic Design portfolio website.">
+	<meta name="description" content="A t-shirt design made by Connor for the 2015 NYC Pride March.">
 	<meta name="author" content="Connor Rowland">
 	<!-- Scripts and Links -->
 	<script>
