--- a/trilogy.html
+++ b/trilogy.html
@@ -5,7 +5,7 @@
 	<!-- Meta Tags -->
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="Web Development and Graphic Design portfolio website.">
+	<meta name="description" content="Graphic Design work done by Connor for a coding bootcamp at Trilogy Educational Services.">
 	<meta name="author" content="Connor Rowland">
 	<!-- Scripts and Links -->
 	<script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js">
